--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,4 +1,4 @@
-<div class="todo" [ngClass]="setClasses()">
+<div [ngClass]="setClasses()">
   <input type="checkbox" />
   {{ todo.title }}
   <button class="del">x</button>
