added event listeners

--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="setClasses()">
-  <input type="checkbox" />
+  <input (change)="onToggle(todo)" type="checkbox" />
   {{ todo.title }}
-  <button class="del">x</button>
+  <button (click)="onDelete(todo)" class="del">x</button>
 </div>
