cleaned up html

--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,2 +1,5 @@
-<app-todo-item *ngFor="let todo of todos" [todo]="todo">
+<app-todo-item 
+  *ngFor="let todo of todos"
+  [todo]="todo"
+>
 </app-todo-item>
