implemented add-todo component

--- a/src/app/components/add-todo/add-todo.component.html
+++ b/src/app/components/add-todo/add-todo.component.html
@@ -1,1 +1,4 @@
-<p>add-todo works!</p>
+<form class="form">
+  <input type="text" name="title" [(ngModel)]="title" placeholder="add todo..."/>
+  <input type="submit" value="Add" class="btn">
+</form>
