--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,6 +1,8 @@
+<app-add-todo></app-add-todo>
 <app-todo-item 
-  *ngFor="let todo of todos"
-  [todo]="todo"
-  (deleteTodo)="deleteTodo($event)"
+*ngFor="let todo of todos"
+[todo]="todo"
+(deleteTodo)="deleteTodo($event)"
 >
-</app-todo-item>
+</app-todo-item> 
+
