add-todo component done

--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,4 +1,6 @@
-<app-add-todo></app-add-todo>
+<app-add-todo
+  (addTodo)="addTodo($event)"
+></app-add-todo>
 <app-todo-item 
 *ngFor="let todo of todos"
 [todo]="todo"
