--- a/src/app/components/add-todo/add-todo.component.html
+++ b/src/app/components/add-todo/add-todo.component.html
@@ -1,4 +1,4 @@
-<form class="form">
+<form class="form" (ngSubmit)="onSubmit()">
   <input type="text" name="title" [(ngModel)]="title" placeholder="add todo..."/>
   <input type="submit" value="Add" class="btn">
 </form>
